# connectors

./: Makefile  pyproject.toml  readme.md
.github/workflows/: hello-world.yml
connectors/base/: __init__.py  base.py
connectors/base/schemas/: __init__.py  base_schemas.py
connectors/ftp_connector/: ftp_connector.py
connectors/ftp_connector/schemas/: __init__.py  ftp_schemas.py
connectors/smb_connector/: connector.py
connectors/smb_connector/schemas/: __init__.py  smb_schemas.py
tests/: test_dummy.py
